--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <title>Rock Paper Scissors!</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <h1>Rock paper scissors game</h1>
+    <h2>5 rounds game</h2>
+    <section>
+        <button class="btn" id="rock">
+            Rock
+        </button>
+        <button class="btn" id="paper">
+            Paper
+        </button>
+        <button class="btn" id="scissors">
+            Scissors
+        </button>
+    </section>
+    <div class="info">
+        <h2 class="actualRound"></h2>
+        <h2 class="count"></h2>
+        <h1 class="result"></h1>
+    </div>
 </body>
 </html>
