--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <h2>5 rounds game</h2>
     <section>
         <button class="btn" id="rock">
-            Rock
+            <img src="assets/rock.png" alt="rock">
         </button>
         <button class="btn" id="paper">
-            Paper
+            <img src="assets/paper.png" alt="Paper">
         </button>
         <button class="btn" id="scissors">
-            Scissors
+            <img src="assets/scissors.png" alt="scissors">
         </button>
     </section>
     <div class="info">
         <h2 class="actualRound"></h2>
         <h2 class="count"></h2>
+        <div class="visual"></div>
         <h1 class="result"></h1>
     </div>
 </body>
